--- a/src/config/config.yml
+++ b/src/config/config.yml
@@ -1,10 +1,10 @@
 port: 8080
 defaultLanguages: "en"
 
-auth:
-  hash_salt: "hash_salt"
-  signing_key: "signing_key"
-  token_ttl: 86400
+jwt:
+  private_key: "hash_salt"
+  access_token_expiration: 86400
+  refresh_token_expiration: 86400
 
 mongo:
   uri: "mongodb://admin:password@localhost:27017"
